[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/UI/UI.gd" type="Script" id=1]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessagePopup" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
custom_minimum_size = Vector2( 300, 200 )
window_title = "Message"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
offset_bottom = 180.0
theme_override_constants/margin_right = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_left = 40
theme_override_constants/margin_bottom = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
offset_left = 40.0
offset_top = 40.0
offset_right = 984.0
offset_bottom = 140.0
custom_minimum_size = Vector2( 0, 100 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
offset_left = 372.0
offset_top = 4.0
offset_right = 572.0
offset_bottom = 96.0

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
offset_right = 200.0
offset_bottom = 14.0
text = "Message: "

[node name="MessageTextEdit" type="TextEdit" parent="MarginContainer/CenterContainer/VBoxContainer"]
offset_top = 18.0
offset_right = 200.0
offset_bottom = 48.0
custom_minimum_size = Vector2( 0, 30 )

[node name="GodotEvent" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
offset_top = 52.0
offset_right = 200.0
offset_bottom = 92.0
custom_minimum_size = Vector2( 200, 40 )
text = "Call event from Godot"
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/GodotEvent" to="." method="_on_GodotEvent_pressed"]
